I developed a lot new things. Thats the first version of website. I placed logo and removed buttoms for log in, because its not necessary on my type of website

--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -795,7 +795,7 @@
 .icon-flag-outline:before {
   content: "\ea32";
 }
-.icon-contacts:before {
+.icon-kontakts:before {
   content: "\ea33";
 }
 .icon-archive2:before {
@@ -1632,10 +1632,10 @@
 .icon-ello:before {
   content: "\eae6";
 }
-.icon-blogger:before {
+.icon-O mnieger:before {
   content: "\eae7";
 }
-.icon-blogger2:before {
+.icon-O mnieger2:before {
   content: "\eae8";
 }
 .icon-tumblr2:before {
