--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,6 +1,6 @@
 /* Common styles */
 
-.pricing {
+.wsparcie {
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-wrap: wrap;
@@ -11,7 +11,7 @@
 	margin: 0 auto 3em;
 }
 
-.pricing__item {
+.wsparcie__item {
 	position: relative;
 	display: -webkit-flex;
 	display: flex;
@@ -29,53 +29,53 @@
 	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.06);*/
 }
 
-.pricing__feature-list {
+.wsparcie__feature-list {
 	text-align: left;
 }
 
-.pricing__action {
+.wsparcie__action {
 	color: inherit;
 	border: none;
 	background: none;
 	width: 100%;
 }
 
-.pricing__action:focus {
+.wsparcie__action:focus {
 	outline: none;
 }
 
 /* Individual styles */
 
 /* Rabten */
-.pricing--rabten .pricing__item {
+.wsparcie--rabten .wsparcie__item {
 	/*padding: 2em 4em;*/
 	cursor: default;
 	color: #262b38;
 	/*max-width: 320px;*/
 }
 
-.pricing--rabten .pricing__item:nth-child(2) {
+.wsparcie--rabten .wsparcie__item:nth-child(2) {
 	border-right: 1px solid rgba(139, 144, 157, 0.18);
 	border-left: 1px solid rgba(139, 144, 157, 0.18);
 }
 
-.pricing--rabten .pricing__title {
+.wsparcie--rabten .wsparcie__title {
 	font-size: 18px;
 	margin: 0 0;
 }
 
-.pricing--rabten .icon {
+.wsparcie--rabten .icon {
 	font-size: 2.5em;
 	color: #8b909d;
 	-webkit-transition: color 0.3s;
 	transition: color 0.3s;
 }
 
-.pricing--rabten .pricing__item:hover .icon {
+.wsparcie--rabten .wsparcie__item:hover .icon {
 	color: #FF9000;
 }
 
-.pricing--rabten .pricing__price {
+.wsparcie--rabten .wsparcie__price {
 	font-size: 3em;
 	font-weight: 400;
 	/*margin: 0.5em 0 0.75em;*/
@@ -84,29 +84,29 @@
 	background: rgba(0,0,0,.03)
 }
 
-.pricing--rabten .pricing__currency {
+.wsparcie--rabten .wsparcie__currency {
 	font-size: 20px;
 	vertical-align: super;
 }
 
-.pricing--rabten .pricing__period {
+.wsparcie--rabten .wsparcie__period {
 	font-size: 0.35em;
 	color: #8b909d;
 }
 
-.pricing--rabten .pricing__anim {
+.wsparcie--rabten .wsparcie__anim {
 	display: inline-block;
 	position: relative;
 }
 
-.pricing--rabten .pricing__item:hover .pricing__anim {
+.wsparcie--rabten .wsparcie__item:hover .wsparcie__anim {
 	-webkit-animation: moveUp 0.4s forwards;
 	animation: moveUp 0.4s forwards;
 	-webkit-animation-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
 	animation-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
 }
 
-.pricing--rabten .pricing__item:hover .pricing__anim--2 {
+.wsparcie--rabten .wsparcie__item:hover .wsparcie__anim--2 {
 	-webkit-animation-delay: 0.05s;
 	animation-delay: 0.05s;
 }
@@ -125,14 +125,14 @@
 	100% { -webkit-transform: translate3d(0,0,0); transform: translate3d(0,0,0); }
 }
 
-.pricing--rabten .pricing__sentence {
+.wsparcie--rabten .wsparcie__sentence {
 	margin: 0 0 1em 0;
 	padding: 0 0 0.5em;
 	color: #8b909d;
 	font-size: 14px;
 }
 
-.pricing--rabten .pricing__feature-list {
+.wsparcie--rabten .wsparcie__feature-list {
 	font-size: 16px;
 	margin: 0;
 	/*padding: 0.25em 0 2.5em;*/
@@ -142,7 +142,7 @@
 	padding: 0 0 2em 0;
 }
 
-.pricing--rabten .pricing__action {
+.wsparcie--rabten .wsparcie__action {
 	width: 60%
 	margin: 0 auto;
 	font-weight: bold;
@@ -159,14 +159,14 @@
 	font-size: 12px;
 }
 
-.pricing--rabten .pricing__action:hover,
-.pricing--rabten .pricing__action:focus {
+.wsparcie--rabten .wsparcie__action:hover,
+.wsparcie--rabten .wsparcie__action:focus {
 	background-color: rgba(0,0,0,.8);
 	color: #fff;
 }
 
 @media screen and (max-width: 60em) {
-	/*.pricing--rabten .pricing__item {
+	/*.wsparcie--rabten .wsparcie__item {
 		max-width: none;
 		width: 90%;
 		flex: none;
